# ChangeLog for games-emulation/snes9x-gtk
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  31 Aug 2009; Michał Ziąbkowski <mziab@o2.pl>
  +snes9x-gtk-1.51_p75.ebuild:
  Bumped.

  20 Jul 2009; Michał Ziąbkowski <mziab@o2.pl>
  +snes9x-gtk-1.51_p74.ebuild:
  Bumped.

  02 Jun 2009; Michał Ziąbkowski <mziab@o2.pl>
  -snes9x-gtk-1.51_p70.ebuild, -snes9x-gtk-1.51_p71.ebuild,
  +snes9x-gtk-1.51_p73.ebuild:
  Bumped. Removed cruft.

  25 May 2009; Michał Ziąbkowski <mziab@o2.pl>
  +snes9x-gtk-1.51_p71.ebuild:
  Bumped. Removed gtkglext dep.

  23 Mar 2009; Michał Ziąbkowski <mziab@o2.pl>
  -snes9x-gtk-1.51_p65.ebuild, -snes9x-gtk-1.51_p67.ebuild,
  -snes9x-gtk-1.51_p69.ebuild, +snes9x-gtk-1.51_p70.ebuild:
  Bumped. Removed cruft.

  16 Mar 2009; Michał Ziąbkowski <mziab@o2.pl>
  +snes9x-gtk-1.51_p69.ebuild:
  Bumped.

  01 Mar 2009; Michał Ziąbkowski <mziab@o2.pl>
  +snes9x-gtk-1.51_p67.ebuild:
  Bumped. Updated HOMEPAGE and SRC_URI.

  15 Feb 2009; Michał Ziąbkowski <mziab@o2.pl>
  -snes9x-gtk-1.51_p61.ebuild, -snes9x-gtk-1.51_p62.ebuild,
  -snes9x-gtk-1.51_p63.ebuild, +snes9x-gtk-1.51_p65.ebuild:
  Bumped. Removed cruft.

  01 Feb 2009; Michał Ziąbkowski <mziab@o2.pl>
  +snes9x-gtk-1.51_p63.ebuild:
  Bumped. Fixed license.

  23 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
  +snes9x-gtk-1.51_p62.ebuild:
  Bumped.

  22 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> snes9x-gtk-1.51_p61.ebuild,
  +files/snes9x-gtk-1.51_p61-as-needed.patch,
  +files/snes9x-gtk-1.51_p61-string-literal.patch:
  Added missing dep and two patches from Mandrake PLF.

  21 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> Manifest:
  Fixed Manifest

  21 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> +metadata.xml:
  Added metadata.xml.

  19 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> snes9x-gtk-1.51_p61.ebuild:
  Fixed trailing whitespace.

  15 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
  +snes9x-gtk-1.51_p61.ebuild:
  Initial ebuild.
