@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Sep 2009; Michał Ziąbkowski <mziab@o2.pl>
+  -snes9x-gtk-1.51_p73.ebuild, -snes9x-gtk-1.51_p74.ebuild,
+  -snes9x-gtk-1.51_p75.ebuild, +snes9x-gtk-1.51_p76.ebuild:
+  Bumped. Removed cruft.
+
   31 Aug 2009; Michał Ziąbkowski <mziab@o2.pl>
   +snes9x-gtk-1.51_p75.ebuild:
   Bumped.
